--- a/index.html
+++ b/index.html
@@ -7,43 +7,26 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+<div>
 
-<input type="text" id="textInput" placeholder="Введи новий текст для кнопки">
-<button id="changeBtn">Натисни мене</button>
-
-
-
-
+  <input type="text" id="text-input" placeholder="Введіть текст">
+  <button id="change-btn">Кнопка</button>
+</div>
 
 <h2>Моє зображення</h2>
-<img id="myImage" src="https://images.pexels.com/photos/140134/pexels-photo-140134.jpeg?auto=compress&cs=tinysrgb&w=400" width="200">
+<img id="my-image" src="old-image.jpg" width="300">
 
-
-
-
-
-<a id="myLink" href="https://google.com" target="_blank">
-  <img id="linkImage" src="https://images.pexels.com/photos/219943/pexels-photo-219943.jpeg?auto=compress&cs=tinysrgb&w=400">
+<a id="my-link" href="https://old-link.com">
+  <img id="link-image" src="old-img.jpg" width="250">
 </a>
 
-
-
-
-<ul id="myList">
+<ul id="my-list">
   <li>Перший елемент</li>
   <li>Другий елемент</li>
   <li>Третій елемент</li>
 </ul>
 
 
-
-
-
-
-
-
-
-
-    <script src="./index.js"></script>
+<script src="./index.js"></script>
 </body>
 </html>
